Bug 403128 - Creating DVD image: DVD structure broken
Summary: Creating DVD image: DVD structure broken
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: Rendering & Export (other bugs)
Version First Reported In: 18.12.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-12 08:50 UTC by Pavel
Modified: 2021-05-14 23:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
fritzibaby: Brainstorm+


Attachments
screenshot (115.11 KB, image/png)
2019-01-12 08:50 UTC, Pavel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel 2019-01-12 08:50:21 UTC
Created attachment 117414 [details]
screenshot

SUMMARY

Cannot finish DVD .iso creation process in DVD wizard.
This error appears: DVD structure broken.

STEPS TO REPRODUCE
1. Open DVD wizard, add video file, no chapters, no menu, select tmp directory and output filename
2. Creation process starts.
3. On "Creating DVD structure" step this error appears:
"DVD structure broken"

OBSERVED RESULT

Screenshot attached.

SOFTWARE/OS VERSIONS
Linux: Gentoo
KDE Plasma Version: 5.14.5
KDE Frameworks Version: 5.53
Qt Version: 5.11.3

ADDITIONAL INFORMATION
dvdauthor version 0.7.2
Comment 1 emohr 2019-01-12 16:32:29 UTC
Im not sure if this is solved in the refactoring version.
I cannot test as the "dvdauthor" is missing. 

If you like you can try with the current Kdenlive_Nightly_Appimage
https://binary-factory.kde.org/job/Kdenlive_Nightly_Appimage_Build/lastSuccessfulBuild/artifact/ 

Run the Appimage from the terminal (press CTRL + ALT + T). Move to the AppImage folder and run the .AppImage: ./Kdenlive*.AppImage
Comment 2 Julius Künzel 2021-03-25 15:51:11 UTC
Thanks for your report! We are currently discussing if it is worth to keep the DVD Wizard in kdenlive or if we should drop it. The discussion is at https://invent.kde.org/multimedia/kdenlive/-/issues/1005. Maybe you want to leave a comment there? (It would be very helpful to have some opinions)
Comment 3 Julius Künzel 2021-05-14 23:09:53 UTC
Git commit 5aaa7466ea0f88642ac81bd31bd1223df17956c1 by Julius Künzel.
Committed on 14/05/2021 at 23:08.
Pushed by jlskuz into branch 'master'.

Remove DVD Wizard
Related: bug 403405, bug 413567, bug 406042, bug 407242, bug 420319, bug 390431, bug 377829, bug 420428
Fixes #681
Fixes #1005

M  +0    -33   data/org.kde.kdenlive.appdata.xml
M  +0    -35   packaging/flatpak/org.kde.kdenlive-nightly.json
M  +0    -1    src/CMakeLists.txt
M  +1    -0    src/bin/bin.cpp
M  +1    -1    src/definitions.h
M  +1    -0    src/dialogs/kdenlivesettingsdialog.cpp
M  +1    -4    src/dialogs/renderwidget.cpp
M  +0    -1    src/dialogs/renderwidget.h
D  +0    -8    src/dvdwizard/CMakeLists.txt
D  +0    -1044 src/dvdwizard/dvdwizard.cpp
D  +0    -91   src/dvdwizard/dvdwizard.h
D  +0    -272  src/dvdwizard/dvdwizardchapters.cpp
D  +0    -64   src/dvdwizard/dvdwizardchapters.h
D  +0    -912  src/dvdwizard/dvdwizardmenu.cpp
D  +0    -147  src/dvdwizard/dvdwizardmenu.h
D  +0    -873  src/dvdwizard/dvdwizardvob.cpp
D  +0    -161  src/dvdwizard/dvdwizardvob.h
M  +1    -0    src/jobs/speedtask.cpp
M  +0    -1    src/kdenliveui.rc
M  +0    -11   src/mainwindow.cpp
M  +2    -2    src/mainwindow.h
M  +1    -0    src/mltconnection.cpp
M  +33   -45   src/monitor/monitor.cpp
M  +0    -1    src/monitor/monitor.h
M  +1    -4    src/monitor/qmlmanager.cpp
M  +0    -4    src/scopes/scopemanager.cpp
M  +1    -0    src/timeline2/model/timelinefunctions.cpp
M  +1    -0    src/timeline2/view/timelinewidget.cpp
D  +0    -149  src/ui/dvdwizardchapters_ui.ui
D  +0    -345  src/ui/dvdwizardmenu_ui.ui
D  +0    -212  src/ui/dvdwizardstatus_ui.ui
D  +0    -173  src/ui/dvdwizardvob_ui.ui
M  +1    -8    src/ui/renderwidget_ui.ui
M  +1    -1    src/utils/otioconvertions.cpp

https://invent.kde.org/multimedia/kdenlive/commit/5aaa7466ea0f88642ac81bd31bd1223df17956c1