Remove DVD Wizard

BUG: 403128
BUG: 403405
BUG: 413567
BUG: 406042
BUG: 407242
BUG: 420319
BUG: 390431
BUG: 377829
BUG: 420428
Fixes #681
Fixes #1005